--- a/mortality_rate_prediction.ipynb
+++ b/mortality_rate_prediction.ipynb
@@ -6,7 +6,7 @@
     "id": "9Ucvm7IH6da3"
    },
    "source": [
-    "# **Final Project**, BAIT509 Winter 2023\n",
+    "# **Final Project**\n",
     "**Business Applications of Machine Learning [100 Marks]**\n"
    ]
   },
@@ -18,7 +18,7 @@
    "source": [
     "Please fill out the following:\n",
     "\n",
-    "• Full Names of all Group members: Ke Xu, Shijie Yu"
+    "• Full Names of all Group members: Shijie Yu, xxx"
    ]
   },
   {
